# medsos_auto

./: .gitignore  SOW Auto Generate  Auto Posting Content (2).docx  cara instalasi  check.py  main.py  pyproject.toml  running_server.txt  tes.py
api/: main.py
automation_dj/: db.sqlite3
automation_dj/automation_dj/: asgi.py  settings.py  urls.py  wsgi.py
automation_dj/setting_template/: admin.py  apps.py  models.py  urls.py  views.py
automation_dj/setting_template/migrations/: 0001_initial.py  0002_alter_videotemplate_options_and_more.py
automation_dj/templates/admin/: login.html
scripts/: asset_downloader.py  asset_service.py  ffmpeg_renderer.py  logging_app.py  music_service.py  render_video.py  template_engine.py  video_process_tes.py
templates/: educational.json  template.py
