[project]
name = "automation-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.6",
    "fastapi>=0.136.3",
    "ffmpeg-python>=0.2.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "gspread>=6.2.1",
    "humanize>=4.15.0",
    "jinja2>=3.1.6",
    "manage-py>=0.2.10",
    "pillow>=12.2.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "tenacity>=9.1.4",
    "uvicorn>=0.48.0",
]
